# my_NLP_Journey

nlp_hub/: .env.example  .gitignore  ARCHITECTURE.md  AUTHORS.md  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  COMPLETION_SUMMARY.sh  CONTRIBUTING.md  CORRECTIONS_COMPLETED.md  DEPLOYMENT.md  FINAL_STATUS.md  INDEX.md  INDUSTRY_STANDARD_UPDATES.md  LICENSE  MAINTAINERS.md  PROJECT_COMPLETION.txt  QUICK_REFERENCE.md  README.md  README_UPDATES.txt  ROADMAP.md  SETUP_SUMMARY.md  UPDATES_SUMMARY.txt  VERIFICATION_CHECKLIST.md  main.py  pyproject.toml  requirements.txt  setup.py
nlp_hub/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
nlp_hub/.github/workflows/: ci-cd.yml
nlp_hub/api/: __init__.py  main.py
nlp_hub/docker/: Dockerfile  docker-compose.yml
nlp_hub/scripts/: examples.py  quickstart.py  translation_examples.py
nlp_hub/src/: __init__.py
nlp_hub/src/chatbot/: __init__.py  manager.py
nlp_hub/src/config/: __init__.py  settings.py
nlp_hub/src/entity/: __init__.py  extractor.py
nlp_hub/src/intent/: __init__.py  classifier.py
nlp_hub/src/llm/: __init__.py  manager.py
nlp_hub/src/preprocessing/: __init__.py  preprocessor.py
nlp_hub/src/rag/: __init__.py  retriever.py
nlp_hub/src/speech/: __init__.py  processor.py
nlp_hub/src/translation/: __init__.py  translator.py
nlp_hub/src/utils/: __init__.py  exceptions.py  logger.py  validators.py
nlp_hub/tests/integration/: test_chatbot.py
nlp_hub/tests/unit/: test_entity.py  test_intent.py  test_translation.py
